update books issue#3

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,9 @@
     <!-- Contenido -->
     <section>
         <b>Libros</b>
-        <p>(Contenido)</p>
+        <p>(Meditaciones)</p>
+        <p>(La vida es sueño)</p>
+        <p>(Rimas y Leyendas)</p>
     </section>
     <section>
         <b>Películas</b>
