update movies & books issue #4

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,11 +14,14 @@
 <!-- Contenido -->
 <section>
     <b>Libros</b>
-    <p>(Contenido)</p>
+    <p>(Amanecer Rojo)</p>
+    <p>(Dune)</p>
 </section>
 <section>
     <b>Películas</b>
-    <p>(Contenido)</p>
+    <p>(Kill Bill)</p>
+    <p>(Matrix)</p>
+    <p>(Fall)</p>
 </section>
 <!-- Pie de pagina -->
 <footer>
